# python-vlc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  MANIFEST.in  Makefile  README  README.md  README.module  README.rst  TODO  dev_setup.py  dev_setup.sh  distribute_setup.py  footer.py  generate.py  header.py  override.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  test.py  vlcwidget.py
.github/workflows/: ruff.yml  tests.yml
docs/: api.rst  conf.py  fullapi.rst  index.rst  requirements.txt
docs/_templates/autosummary/: module.rst
examples/: cocoavlc.py  gtk2vlc.py  gtkvlc.py  play_buffer.py  psgvlc.py  pyobjcvlc.py  pyqt5vlc.py  qtvlc.py  tkvlc.py  wxvlc.py
examples/video_sync/: README.md  main.py  mini_player.py  network.py
generator/: __init__.py  footer.py  generate.py  header.py  override.py
generator/templates/: MANIFEST.in  footer.py  header.py  override.py  pyproject.toml  setup.py
tests/: gctest.py  test.py  test_bindings.py  test_generator.py
tests/samples/: README
tests/test_parser_inputs/: callbacks.h  enums.h  funcs.h  libvlc_version_with_extra.h  libvlc_version_without_extra.h  structs.h
